--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-        window.location.href = "https://drive.google.com/open?id=1IkbavDONBSNS7xoYZCkaqMx6YOnbpPNL"
+        window.location.href = "https://drive.google.com/drive/folders/17c7eD1SMxScQNQDtvXC5rvMhhgBOaAHr?usp=sharing"
     </script>
 </head>
 <body>
